--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,18 @@
+amqp==2.6.1
 asgiref==3.2.10
+billiard==3.6.3.0
+celery==4.4.7
 dj-database-url==0.5.0
 Django==3.1
 django-crispy-forms==1.9.2
 django-heroku==0.3.1
 gunicorn==20.0.4
+kombu==4.6.11
 psycopg2==2.8.5
 python-http-client==3.3.0
 pytz==2020.1
 sendgrid==6.4.6
 sqlparse==0.3.1
 starkbank-ecdsa==1.0.0
+vine==1.3.0
 whitenoise==5.2.0
